All but contributions

--- a/FinalProjectGroup_060-Wi23.ipynb
+++ b/FinalProjectGroup_060-Wi23.ipynb
@@ -35,9 +35,7 @@
    "source": [
     "Our project aims to shine light on the issues of crime rate in Los Angeles county and explores its relationship with the locations of police stations. By utilizing the data of crime records collected by the LA Police Department from 2010-present combined with current locations of LAPD police stations, we attempted a geographic data analysis and discovered trends in crime types and the locations associated with it. We found that only a small percentage of crime happens near police stations, and that most crimes are out of reach from current stations. \n",
     "\n",
-    "Furthermore, we performed clustering algorithms that propose alternative/new locations for police stations around the county to more effectively distribute station locations. Our solutions showed that there are positive impacts that could be made such as more evenly spreading out certain types of crime among police stations. Through this we conclude that \n",
-    "\n",
-    "# [TBD]"
+    "Furthermore, we performed clustering algorithms using K-Means that propose alternative/new locations for police stations around the county to more effectively distribute station locations, and we found that severe crimes tend to happen less near our new proposed police stations. To conclude, our solutions showed that there are positive impacts that could be made through exploring new police locations and that by doing so we can more evenly spread out crime among police stations and distribute resources of the police department more efficiently."
    ]
   },
   {
@@ -109,8 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "We believe that less crime will happen closer to police stations which would imply that the presence of a police station deters crime. If criminal activity happens less around police stations then it would be important to effectively spread out police stations in order to minimize crime rate as a whole."
+    "We believe that less crime will happen closer to police stations which would imply that the presence of a police station deters crime. If criminal activity occurs less around police stations, then perhaps we can locate stronger positions for police stations that can more evenly tackle crimes."
    ]
   },
   {
@@ -506,8 +503,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_5 = pd.Series(df_plot['Crm Cd Desc'].value_counts()[:5].index)\n",
-    "top_5_list = np.array(df_plot['Crm Cd Desc'].value_counts()[:5].index)\n",
+    "top_5 = pd.Series(df['Crm Cd Desc'].value_counts()[:5].index)\n",
+    "top_5_list = np.array(df['Crm Cd Desc'].value_counts()[:5].index)\n",
     "top_5_list"
    ]
   },
@@ -517,7 +514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_5_plot = df_plot[df_plot['Crm Cd Desc'].isin(top_5_list)]\n",
+    "top_5_plot = df[df['Crm Cd Desc'].isin(top_5_list)]\n",
     "top_5_plot.head()"
    ]
   },
@@ -571,8 +568,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "map_df = gpd.read_file('LAPD_Divisions.shp')\n",
-    "\n",
     "fig, ax = plt.subplots(1, figsize = (20, 12))\n",
     "\n",
     "map_df.boundary.plot(color='black', ax=ax)\n",
@@ -609,16 +604,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# num_clusters = [21, 10, 40]\n",
-    "\n",
-    "num_clusters = [1, 2]\n",
+    "num_clusters = [21, 10, 40]\n",
     "fig, ax = plt.subplots(2, len(num_clusters) + 1, figsize = (18, 8))\n",
     "\n",
     "# original plot with police stations and original precincts as clusters\n",
     "map_df.boundary.plot(color='black', ax=ax[0][0])\n",
     "df.plot(ax=ax[0][0], x='LON', y='LAT', kind='scatter', c='AREA',  s=0.1, alpha=0.5, cmap='viridis')\n",
     "LAPD_df.plot(ax=ax[0][0], x='Longitude', y='Latitude', kind='scatter', s=5, c='black')\n",
-    "df[\"cluster\"].value_counts().plot(kind=\"barh\", ax=ax[1][0])\n",
+    "df[\"AREA NAME\"].value_counts().plot(kind=\"barh\", ax=ax[1][0])\n",
     "\n",
     "for n in range(len(num_clusters)):\n",
     "    # calculate k-means with n clusters\n",
@@ -867,7 +860,7 @@
    "outputs": [],
    "source": [
     "# merging crimes with LA police station. This is to get location of crime with location of the associated police station\n",
-    "df_merged = df_plot.merge(LAPD_df, left_on = \"AREA\", right_on = \"PREC\")"
+    "df_merged = df.merge(LAPD_df, left_on = \"AREA\", right_on = \"PREC\")"
    ]
   },
   {
@@ -1026,10 +1019,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Specify who in your group worked on which parts of the project.*"
+    "Nathan Ahmann -\n",
+    "\n",
+    "Alex Guan -\n",
+    "\n",
+    "Alan Miyazaki -\n",
+    "\n",
+    "Renaldy Herlim - "
    ]
   }
  ],
