Update with Alan's contributions

--- a/FinalProjectGroup_060-Wi23.ipynb
+++ b/FinalProjectGroup_060-Wi23.ipynb
@@ -1675,11 +1675,23 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Specify who in your group worked on which parts of the project.*"
+    "Alex Guan - \n",
+    "\n",
+    "Nathan Ahmann - \n",
+    "\n",
+    "Alan Miyazaki - Completed the top 5 crime and new years outlier exploratory data analysis, along with the severe crime k means clustering analysis.\n",
+    "\n",
+    "Renaldy Herlim - "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
