Added renaldy contributions

--- a/FinalProjectGroup_060-Wi23.ipynb
+++ b/FinalProjectGroup_060-Wi23.ipynb
@@ -1685,7 +1685,7 @@
     "\n",
     "Alan Miyazaki - Completed the top 5 crime and new years outlier exploratory data analysis, along with the severe crime k means clustering analysis.\n",
     "\n",
-    "Renaldy Herlim - "
+    "Renaldy Herlim - Worked on ArcGIS new station locations, organized notebook and repository, writing the overview, and conclusions "
    ]
   },
   {
