Added Alex contributions

--- a/FinalProjectGroup_060-Wi23.ipynb
+++ b/FinalProjectGroup_060-Wi23.ipynb
@@ -1679,7 +1679,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Alex Guan - \n",
+    "Alex Guan - Worked on early exploratory data analysis and data cleaning. Did K means clustering on all crime data and analyzed the results. Calculated and analyzed crimes that occured near police stations.\n",
     "\n",
     "Nathan Ahmann - \n",
     "\n",
