Added my contributions

--- a/FinalProjectGroup_060-Wi23.ipynb
+++ b/FinalProjectGroup_060-Wi23.ipynb
@@ -1681,17 +1681,12 @@
    "source": [
     "Alex Guan - Worked on early exploratory data analysis and data cleaning. Did K means clustering on all crime data and analyzed the results. Calculated and analyzed crimes that occured near police stations.\n",
     "\n",
-    "Nathan Ahmann - \n",
+    "Nathan Ahmann - Organized the group work and logistics via Discord. Found initial dataset and worked on possible hypothesis. Did background research and wrote about findings. Found LA city geohub and did any coding involving geopandas for plotting and getting areas of shapes. Wrote explanations for k-means and cleaned the k-means plots to a single subplot.\n",
     "\n",
     "Alan Miyazaki - Completed the top 5 crime and new years outlier exploratory data analysis, along with the severe crime k means clustering analysis.\n",
     "\n",
     "Renaldy Herlim - Worked on ArcGIS new station locations, organized notebook and repository, writing the overview, and conclusions "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
