--- a/FinalProjectGroup_060-Wi23.ipynb
+++ b/FinalProjectGroup_060-Wi23.ipynb
@@ -13,6 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Please use collection time: Friday"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Permissions\n",
     "\n",
     "Place an `X` in the appropriate bracket below to specify if you would like your group's project to be made available to the public. (Note that student names will be included (but PIDs will be scraped from any groups who include their PIDs).\n",
@@ -1697,6 +1705,11 @@
     "\n",
     "It is in the Github repo ([Link](https://github.com/COGS108/Group_060-Wi23/blob/master/Project_Presentation.mp4))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
